# AgentEnterpriseValuation

./: .dockerignore  .env.example  CLAUDE.md  CODE_REUSE.md  DOCKER_README.md  Dockerfile.eodmcp  Dockerfile.postgres  LICENSE  MIGRATION_GUIDE.md  README.md  WEB_UI_QUICKSTART.md  agents_config.py  docker-compose.yml  eodmcp-entrypoint.sh  init-db.sql  pyproject.toml  run-mcp.sh  run_web_ui.sh
EODHD_MCP_server/: README.md  requirements.txt  server.py
EODHD_MCP_server/app/: api_client.py
EODHD_MCP_server/app/tools/: __init__.py  capture_realtime_ws.py  get_company_news.py  get_earnings_trends.py  get_economic_events.py  get_exchange_details.py  get_exchange_tickers.py  get_exchanges_list.py  get_fundamentals_data.py  get_historical_market_cap.py  get_historical_stock_prices.py  get_insider_transactions.py  get_intraday_historical_data.py  get_live_price_data.py  get_macro_indicator.py  get_mp_illio_market_insights_best_worst.py  get_mp_illio_market_insights_performance.py  get_mp_illio_market_insights_volatility.py  get_mp_illio_performance_insights.py  get_mp_illio_risk_insights.py  (+18 more)
EODHD_MCP_server/test/: all_tests.py  test_client.py  test_client_stdio.py
agententerpriseval/: __main__.py
agents/financial_assistant/: README.md  __init__.py  agent.py  agent_validator.py  data_agent.py  dcf_agent.py  eodhd_mcp.py  forecast_agent.py  multiples_agent.py  normalization_agent.py  report_agent.py  scoping_agent.py  wacc_agent.py
conf/: local.yml
googleadkplayground/: __main__.py  essay_writer_agent.py  stocks.py
services/: __init__.py  postgres_memory_service.py
